frame/support/test/tests/construct_runtime_ui/feature_gated_system_pallet.stderr
error: `System` pallet declaration is feature gated, please remove any `#[cfg]` attributes
 --> tests/construct_runtime_ui/feature_gated_system_pallet.rs:7:3
  |
7 |         System: frame_system::{Pallet, Call, Storage, Config<T>, Event<T>},
  |         ^^^^^^
